# convergio-multitenancy

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-multitenancy/: Cargo.toml
crates/convergio-multitenancy/src/: audit_isolation.rs  db_isolation.rs  ext.rs  lib.rs  mcp_defs.rs  network_isolation.rs  resource_limits.rs  routes.rs  schema.rs  secret_isolation.rs  types.rs
crates/convergio-multitenancy/tests/: security_org_isolation.rs
docs/adr/: 001-audit-security-fixes.md  001-extraction.md
