[package]
name = "convergio-multitenancy"
description = "Multi-tenancy isolation — tenant routing, quotas, and namespace management"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
